controller/pkg/agentgateway/plugins/testdata/backendpolicy/selector-backend.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: labeled-be1
  namespace: default
  labels:
    tier: backend
spec:
  static:
    host: example1.com
    port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: labeled-be2
  namespace: default
  labels:
    tier: backend
spec:
  static:
    host: example2.com
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: be-route
  namespace: default
spec:
  parentRefs:
    - name: test
  rules:
    - backendRefs:
        - name: labeled-be1
          group: agentgateway.dev
          kind: AgentgatewayBackend
        - name: labeled-be2
          group: agentgateway.dev
          kind: AgentgatewayBackend
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: agw
  namespace: default
spec:
  targetSelectors:
  - kind: AgentgatewayBackend
    group: agentgateway.dev
    matchLabels:
      tier: backend
  backend:
    health:
      unhealthyCondition: "response.code >= 500"
      eviction:
        duration: 30s
        consecutiveFailures: 5

---
# Output
output:
- gateway:
    Name: test
    Namespace: default
  resource:
    policy:
      backend:
        health:
          eviction:
            consecutiveFailures: 5
            duration: 30s
          unhealthyCondition: response.code >= 500
      key: default/agw:health:default/labeled-be1
      name:
        kind: AgentgatewayPolicy
        name: agw
        namespace: default
      target:
        backend:
          name: labeled-be1
          namespace: default
- gateway:
    Name: test
    Namespace: default
  resource:
    policy:
      backend:
        health:
          eviction:
            consecutiveFailures: 5
            duration: 30s
          unhealthyCondition: response.code >= 500
      key: default/agw:health:default/labeled-be2
      name:
        kind: AgentgatewayPolicy
        name: agw
        namespace: default
      target:
        backend:
          name: labeled-be2
          namespace: default
status:
- apiVersion: agentgateway.dev/v1alpha1
  kind: AgentgatewayPolicy
  metadata:
    name: agw
    namespace: default
  spec: null
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: test
        namespace: default
      conditions:
      - lastTransitionTime: fake
        message: Policy accepted
        reason: Valid
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: Attached to all targets
        reason: Attached
        status: "True"
        type: Attached
      controllerName: agentgateway.dev/agentgateway
